--- a/search3.html
+++ b/search3.html
@@ -8,17 +8,17 @@
   <body>
     <h1><strong>Book-O-Rama Catalog Search</strong></h1>
     <form action="results3.php" method="post">
-        <p><strong>Choose Search Type:</strong></p>
-        <select name="searchtype" id="">
-            <option value="Author">Author</option>
-            <option value="ISBN">ISBN</option>
-            <option value="Title">Title</option>
-        </select>
-        <p><strong>Enter Search Term:</strong></p>
-        <input type="text" name="searchterm">
-        <br>
-        <br>
-        <input type="submit" name="Submit" value="Submit">
+      <p><strong>Choose Search Type:</strong></p>
+      <select name="searchtype" id="">
+        <option value="Author">Author</option>
+        <option value="ISBN">ISBN</option>
+        <option value="Title">Title</option>
+      </select>
+      <p><strong>Enter Search Term:</strong></p>
+      <input type="text" name="searchterm" />
+      <br />
+      <br />
+      <input type="submit" name="Submit" value="Submit" />
     </form>
   </body>
 </html>
